# rtseg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: Affinity VF and batching.ipynb  Animation.ipynb  Augmentations and distribution check.ipynb  Backbone and internal coordinate.ipynb  Calculate vector fields and integrate.ipynb  Cellseg.ipynb  Channel locations and barcodes debug.ipynb  Dask pipelining.ipynb  Dataloader and calculations in a batch.ipynb  Debugging init area.ipynb  Detect barcodes new chip.ipynb  Detecting channels.ipynb  Dot detection and segmentation with pycromanger.ipynb  Dot detection.ipynb  EXP-25-CD0128.ipynb  Fork plots.ipynb  Loss and metrics.ipynb  Metrics.ipynb  Network reconstruction batched.ipynb  Oscar_ForkPlotScoringTest.ipynb  Oscar_plot_tests.ipynb  PCAClusterTestTransposonLib.ipynb  Plotting fork plots.ipynb  Plotting issues.ipynb  Polars.ipynb  Pycromanager Grabbing two images.ipynb  Pycromanager.ipynb  Serialization.ipynb  TensorRT.ipynb  Testing dump.ipynb  Testing live stuff.ipynb  Testing logger.ipynb  Tiling.ipynb  Timing forkplot generation.ipynb  Write vector fields.ipynb  Writing segmented blobs.ipynb  pyproject.toml
notebooks/dask/: Dask Futures.ipynb  Dask.ipynb  Pandas.ipynb  Pyro.ipynb  Rendering.ipynb  Test Chaining functions.ipynb  Untitled.ipynb
notebooks/pyro/: dask_test.py
rtseg/: dotdetect.py  forkplot.py  forkplot_app.py  identify_channels.py  segmentation.py  test.py
rtseg/barcodedetect/: datasets.py  logger.py  loss.py  networks.py  test.py  train.py  transforms.py  utils.py
rtseg/barcodedetect/configs/: barcodedetect.yaml
rtseg/cells/: Cells.py  internal_coordinates.py  plotting.py  regionprops_custom.py  scoring.py  utils.py
rtseg/cellseg/: dataloaders.py  losses.py  network.py  train.py
rtseg/cellseg/configs/: cellseg.yaml  cellsegMM.yaml
rtseg/cellseg/networks/: ResUnet.py  SegFormer.py  UMamba.py  __init__.py
rtseg/cellseg/numerics/: affinity_vf.py  cluster.py  sdf_vf.py  vf_to_masks.py
rtseg/cellseg/numerics/differentiation/: finite_differences.py  kernels.py
rtseg/cellseg/numerics/integration/: integrate_vf.py  solvers.py  utils.py
rtseg/cellseg/numerics/interpolation/: functional.py  interpolate_vf.py
rtseg/cellseg/utils/: checkpoints.py  metrics.py  transforms.py
rtseg/dotdetection/: detect.py
rtseg/oldseg/: datasets.py  logger.py  loss.py  metrics.py  networks.py  train.py  transforms.py  utils.py
rtseg/oldseg/configs/: segment.yaml
rtseg/resources/reference_params/: reference_linux.yaml  reference_microscope.yaml
rtseg/utils/: db_ops.py  disk_ops.py  get_fork_init.py  hardware.py  logger.py  param_io.py  types.py
tests/: test_differentiation.py  test_net.py  test_torch.py
(+5 files in other folders)
